fixed spacing

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -318,7 +318,7 @@
       height: 25px; }
   .jazz.page-home .masthead-top {
     background-image: url(/images/titles/home_title.png);
-    background-position: 10px 5px; }
+    background-position: 10px 1px; }
   .jazz.page-home .masthead {
     background: url(/images/home/masthead_bg.png) repeat-x;
     margin-bottom: 0px; }
@@ -397,13 +397,13 @@
       margin: 17px 0 0 8px;
       float: left; }
   .jazz.page-home #tonights_shows {
-    width: 282px;
+    width: 284px;
     height: 572px;
     overflow: hidden;
     float: right;
     background: url(/images/home/shows_bgrnd.png) no-repeat 0px 0px !important;
     margin: 21px 0 0 0;
-    padding: 5px 18px 0 10px; }
+    padding: 5px 18px 0 8px; }
     .jazz.page-home #tonights_shows .show-listing {
       width: 265px;
       height: 327px;
